<resources>
    <string name="app_name">navdrawer_kotlin</string>
    <string name="open">open</string>
    <string name="close">close </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm_password</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="help">HELP</string>
    <string name="log_out">Log Out</string>
    <string name="stop">Stop</string>
    <string name="header">Header</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_id">Email ID</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="register_details">Register Details</string>
    <string name="logout">LogOut</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_location">LocationActivity</string>
</resources>