<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat"/>

    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/location"/>

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/Login"/>

    <item
        android:id="@+id/register"
        android:icon="@drawable/ic_baseline_app_registration_24"
        android:title="@string/Register"/>
</menu>